--- a/sass_scss/3-nested_tag.scss
+++ b/sass_scss/3-nested_tag.scss
@@ -1,8 +1,6 @@
 /* using nested declarations */
 body {
     margin: 0px;
-    padding: 0px;
+    padding: 0px; }
     body p {
-        margin: 10px;
-    }
-}
+      margin: 10px; }
