removed body from line 4

--- a/sass_scss/5-nested_child.scss
+++ b/sass_scss/5-nested_child.scss
@@ -1,5 +1,5 @@
 /* even more nested declaratoins for class red that are first children of body */
 body {
     color: #3D3D3D; }
-    body > .red {
+    > .red {
       color: #FF0000; }
