--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,5 +1,7 @@
 /* using nested declarations */
 button {
-    color: #FF0000; }
+    color: #FF0000;
     button:hover {
-        color: #00FF00; }
+        color: #00FF00; 
+    }
+}
