--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,7 +1,7 @@
 /* using nested declarations */
 button {
     color: #FF0000;
-    button:hover {
-        color: #00FF00; 
+    :hover {
+        color: #00FF00;
     }
 }
