--- a/sass_scss/9-extend_list.scss
+++ b/sass_scss/9-extend_list.scss
@@ -1,12 +1,14 @@
 /* extended */
-.info, .success, .warning {
+.info {
     font-size: 12px;
-}
-
-.success {
+  }
+  
+  .success {
+    @extend .info;
     color: #00FF00;
-}
-
-.warning {
+  }
+  
+  .warning {
+    @extend .info;
     color: #FF0000;
-}
+  }
