--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -342,10 +342,6 @@
     text-align: var(--section-footer-align);
   }
 
-  .section-services {
-    
-  }
-
   /* Section theming
       ============================= */
 
@@ -375,8 +371,7 @@
   }
 
   /*** Section Latest news ============================= */
-
-  section-latest-news .row {
+    .section-latest-news .row {
     flex-direction: row-reverse;
   }
 
