--- a/flexbox/10-styles.css
+++ b/flexbox/10-styles.css
@@ -367,6 +367,10 @@
     min-height: 50vh;
   }
 
+  .section-hero .section-body {
+    padding: 10rem 4rem;
+  }
+
   .section-hero .section-category {
     color: var(--color-white);
     text-transform: uppercase;
