--- a/accessibility/keyboard/01-styles.css
+++ b/accessibility/keyboard/01-styles.css
@@ -689,12 +689,18 @@
       opacity: 1;
     }
   
-    .card-work .card-title a {
+    .card-work .card-title a { 
+      opacity: 0;
       display: block;
       padding: 2rem 1rem 0 1rem;
-      opacity: 0;
     }
   
+    .card-work:hover .card-title a {
+        opacity: 1;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+
     .card-work .card-title a:focus {
         opacity: 1;
         height: 100%;
