--- a/accessibility/keyboard/01-styles.css
+++ b/accessibility/keyboard/01-styles.css
@@ -646,6 +646,18 @@
     transition: var(--transition-duration) var(--transition-cubic-bezier);
   }
   
+  .card-work:hover .card-image a {
+    opacity: 1;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+
+  .card-work .card-title a:focus {
+    opacity: 1;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
   .card-work .card-inner {
     position: absolute;
     top: -0.1rem;
@@ -667,6 +679,7 @@
     display: block;
     text-decoration: none;
     padding-top: 45%;
+    opacity: 0;
   }
   
   .card-work .card-title a::after {
@@ -689,24 +702,11 @@
       opacity: 1;
     }
   
-    .card-work .card-title a { 
-      opacity: 0;
+    .card-work .card-title a {
       display: block;
       padding: 2rem 1rem 0 1rem;
     }
   
-    .card-work:hover .card-title a {
-        opacity: 1;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-    }
-
-    .card-work .card-title a:focus {
-        opacity: 1;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-    }
-
     .card-work:hover .card-inner {
       background-color: transparent;
     }
