--- a/accessibility/keyboard/01-styles.css
+++ b/accessibility/keyboard/01-styles.css
@@ -646,7 +646,7 @@
     transition: var(--transition-duration) var(--transition-cubic-bezier);
   }
   
-  .card-work:hover .card-image a {
+  .card-work:hover .card-title a {
     opacity: 1;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
