--- a/accessibility/skip-links/01-styles.css
+++ b/accessibility/skip-links/01-styles.css
@@ -207,7 +207,7 @@
     transition: transform .2s ease-in-out, opacity .2s ease-in-out;
   }
 
-  .skip-link focus {
+  .skip-link:focus {
     opacity: 1;
     transform: translateY(0);
   }
