missed the 2 in fieldset padding

--- a/form/02-styles.css
+++ b/form/02-styles.css
@@ -675,5 +675,5 @@
     flex-direction: column;
     justify-content: flex-start;
     border: 0;
-    padding: 0 0 rem;
+    padding: 0 0 2rem;
   }
