added missing class selectors

--- a/form/05-styles.css
+++ b/form/05-styles.css
@@ -728,11 +728,11 @@
   /* Form field
     ============================= */
 
-    form-field-container {
+    .form-field-container {
         position: relative;
     }
 
-    form-field-icon {
+    .form-field-icon {
         font-style: normal;
     }
 
