--- a/form/07-styles.css
+++ b/form/07-styles.css
@@ -851,7 +851,7 @@
         transition: width .4s cubic-bezier(0, 0.795, 0, 1);
     }
 
-    .form-search .input[type="search"]:focus {
+    .form-search input[type="search"]:focus {
         position: relative;
         width: 15rem;
         z-index: 1;
